[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "hwprobe.__version__" }

[project]
name = "HWProbe"
dynamic = ["version"]
description = "A cross-platform system information gatherer"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]

authors = [
    { name = "Mahasvan", email = "mahasvan@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hwprobe" = ["interops/**/dll/*.dll"]

[project.urls]
Homepage = "https://github.com/Mahasvan/HWProbe"
Issues = "https://github.com/Mahasvan/HWProbe/issues"
